clusters/oracle-cluster/apps/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: freshrss
  labels:
    app: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
      - name: freshrss
        image: linuxserver/freshrss:latest@sha256:5cccae5854c93c7108b9952c2badaa3677c4e8ceadbb610f476c518c617eaee2
        ports:
          - containerPort: 80
            protocol: TCP
        volumeMounts:
        - name: freshrss-data
          mountPath: /config
      terminationGracePeriodSeconds: 30
      volumes:
      - name: freshrss-data
        persistentVolumeClaim:
          claimName: freshrss-pvc
