clusters/oracle-cluster/apps/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss-service
  namespace: freshrss
spec:
  selector:
    app: freshrss
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
