clusters/oracle-cluster/apps/freshrss/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: freshrss-ingress
    namespace: freshrss
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:l6phGN6l57f8plfOIktRr1Kiknvu3kxuUA==,iv:oJhP3YRPYQnTQwV8DGJ+rXiKfmev0RDZZ0KY6WvVzkk=,tag:EFybLUANwinBktlZS1360w==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:LGFMfFtl8Nh0Lrn1ODbi+xDw3xBddMVvZg==,iv:Sm15b5karwAx2mGMDQ4Wk7b0F+up0CB07DRjYxrm77U=,tag:87/EYsS6GRkGMxrCZfFpRw==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: freshrss-service
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXclc0bWdOdWpodFZoUjNs
[...]
            xZupsgU/mBH0ViyfD9GHtT6dGoBPyMWBzdoNtVaC+yAyo3+qz6HyzA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-16T10:16:50Z"
    mac: ENC[AES256_GCM,data:w3lD5aML9RkKSiOqzzbQSpTcxNy5DCUyUX57GdJOGZqHwwiB6fud5ozT8NSyy9t85YK71b670ziFuU01xq3+36uxc7BRwPcPduKLH4tUhE99i1PejZC5X8pgVoaBXYOWBMcqgPQUYLrl+Upudrcn0plrQKGlmJg+WlqRTVjc/Zs=,iv:BJ/mPB8nfXWIMv19dTFW9GjDC+G8fvYS20ZEPylJb+g=,tag:V+5NgyXUy4l7AvTEIwaM9Q==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
